--- a/public/global.css
+++ b/public/global.css
@@ -32,8 +32,14 @@ input, button, select, textarea {
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
+	border: none;
+	border-bottom: 2px solid white;
+	background-color: transparent;
+}
+
+input {
+	font-size: 1.1rem;
+	color: white;
 }
 
 input:disabled {
