--- a/public/global.css
+++ b/public/global.css
@@ -3,7 +3,7 @@ html, body {
 	height: 100%;
 }
 
-body {
+/* body {
 	color: #333;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -62,4 +62,4 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
-}
+} */
